--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
         body {            
             /*background: linear-gradient(180deg, #2b2927, #151618);*/
             background: linear-gradient(150deg, #ffffff, #ecb040, #ce3009,#ca095a);
+            background: linear-gradient(150deg, #ffffff, #ecb040, #ce3009,#ca095a);
             background-attachment: fixed;
             background-size: 100% 100%;
             background-repeat: no-repeat;
