--- a/style.css
+++ b/style.css
@@ -26,20 +26,18 @@
 
 
         body {            
-            /*background: linear-gradient(180deg, #2b2927, #151618);*/
-            background: linear-gradient(150deg, #ffffff, #ecb040, #ce3009,#ca095a);
             background: linear-gradient(150deg, #ffffff, #ecb040, #ce3009,#ca095a);
             background-attachment: fixed;
             background-size: 100% 100%;
             background-repeat: no-repeat;
             font-family: 'Abel', sans-serif;
-            text-align: center;
+            text-align: left;
             color: #272727;
             font-weight: 300;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            justify-content: left;
+            align-items: left;
             height: 100vh;
             margin: 0;
             
